# sentinel-core-desktop

./: .gitignore  CONTEXTO_TECNICO.md  FRONTEND_PAGES_ROADMAP.md  PROTOCOLO_AUDITORIA.md  README.md  migration_plan.md  package-lock.json  package.json  procesosengram.md  run-sentinel.sh  tauri_migration_context.md
.github/workflows/: build.yml  ci.yml
backend/: .env.template  .gitignore  package-lock.json  package.json  tsconfig.json  vitest.config.js
backend/prisma/: schema.prisma  seed-mall.ts  seed.ts
backend/src/: app.ts  server.ts
backend/src/__tests__/: auth.schema.test.ts  ticket.schema.test.ts
backend/src/config/: constants.ts  env.ts  prisma.ts
backend/src/controllers/: audit.controller.ts  auth.controller.ts  backup.controller.ts  category.controller.ts  comment.controller.ts  metrics.controller.ts  notification.controller.ts  ticket.controller.ts  user.controller.ts
frontend/: index.html  lint-results.json  package-lock.json  package.json  vite.config.js  vitest.config.js
frontend/coverage/: clover.xml  index.html
frontend/src/: App.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri_permissions.txt
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql
src-tauri/src/: db.rs  errors.rs  lib.rs  main.rs  models.rs  seed.rs  sla.rs  state_machine.rs
src-tauri/src/commands/: assignments.rs  audit.rs  auth.rs  backups.rs  categories.rs  comments.rs  diagnostics.rs  metrics.rs  mod.rs  notifications.rs  tickets.rs  users.rs
(+115 files in other folders)
