[package]
name = "sentinel-core"
version = "1.0.0"
description = "Sistema de Gestión de Tickets para Centro Comercial"
authors = ["GiuDPC"]
edition = "2021"

[lib]
name = "sentinel_core_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
argon2 = "0.5"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "chrono"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8"
directories = "6.0.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
